Complete Jobs REST API Resources
