# rest-api/resources/src/main/java/org/eclipse/kapua/app/api/resources/v1/resources/JobStepDefinitions.java
@@ -1,0 +1,133 @@
+/*******************************************************************************
+ * Copyright (c) 2016, 2021 Eurotech and/or its affiliates and others
+ *
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Eurotech - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.kapua.app.api.resources.v1.resources;
+
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DefaultValue;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.MediaType;
+
+import org.eclipse.kapua.KapuaException;
+import org.eclipse.kapua.app.api.core.model.CountResult;
+import org.eclipse.kapua.app.api.core.model.EntityId;
+import org.eclipse.kapua.app.api.core.model.ScopeId;
+import org.eclipse.kapua.app.api.core.resources.AbstractKapuaResource;
+import org.eclipse.kapua.locator.KapuaLocator;
+import org.eclipse.kapua.service.KapuaService;
+import org.eclipse.kapua.service.job.Job;
+import org.eclipse.kapua.service.job.step.JobStep;
+import org.eclipse.kapua.service.job.step.JobStepListResult;
+import org.eclipse.kapua.service.job.step.JobStepQuery;
+import org.eclipse.kapua.service.job.step.definition.JobStepDefinition;
+import org.eclipse.kapua.service.job.step.definition.JobStepDefinitionFactory;
+import org.eclipse.kapua.service.job.step.definition.JobStepDefinitionListResult;
+import org.eclipse.kapua.service.job.step.definition.JobStepDefinitionQuery;
+import org.eclipse.kapua.service.job.step.definition.JobStepDefinitionService;
+
+@Path("{scopeId}/jobStepDefinitions")
+public class JobStepDefinitions extends AbstractKapuaResource {
+
+    private final KapuaLocator locator = KapuaLocator.getInstance();
+    private final JobStepDefinitionService jobStepDefinitionService = locator.getService(JobStepDefinitionService.class);
+    private final JobStepDefinitionFactory jobStepDefinitionFactory = locator.getFactory(JobStepDefinitionFactory.class);
+
+    /**
+     * Gets the {@link JobStep} list for a given {@link Job}.
+     *
+     * @param scopeId The {@link ScopeId} in which to search results.
+     * @param offset  The result set offset.
+     * @param limit   The result set limit.
+     * @return The {@link JobStepListResult} of all the jobs jobSteps associated to the current selected job.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @GET
+    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
+    public JobStepDefinitionListResult simpleQuery(
+            @PathParam("scopeId") ScopeId scopeId,
+            @QueryParam("offset") @DefaultValue("0") int offset,
+            @QueryParam("limit") @DefaultValue("50") int limit) throws KapuaException {
+
+        JobStepDefinitionQuery query = jobStepDefinitionFactory.newQuery(null);
+
+        query.setOffset(offset);
+        query.setLimit(limit);
+
+        return query(scopeId, query);
+    }
+
+    /**
+     * Queries the results with the given {@link JobStepQuery} parameter.
+     *
+     * @param scopeId The {@link ScopeId} in which to search results.
+     * @param query   The {@link JobStepQuery} to use to filter results.
+     * @return The {@link JobStepListResult} of all the result matching the given {@link JobStepQuery} parameter.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @POST
+    @Path("_query")
+    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    public JobStepDefinitionListResult query(
+            @PathParam("scopeId") ScopeId scopeId,
+            JobStepDefinitionQuery query) throws KapuaException {
+        query.setScopeId(null);
+        return jobStepDefinitionService.query(query);
+    }
+
+    /**
+     * Counts the results with the given {@link JobStepQuery} parameter.
+     *
+     * @param scopeId The {@link ScopeId} in which to search results.
+     * @param query   The {@link JobStepQuery} to use to filter results.
+     * @return The count of all the result matching the given {@link JobStepQuery} parameter.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @POST
+    @Path("_count")
+    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    public CountResult count(
+            @PathParam("scopeId") ScopeId scopeId,
+            JobStepQuery query) throws KapuaException {
+        query.setScopeId(null);
+
+        return new CountResult(jobStepDefinitionService.count(query));
+    }
+
+    /**
+     * Returns the Job specified by the "jobId" path parameter.
+     *
+     * @param scopeId The {@link ScopeId} of the requested {@link Job}.
+     * @param stepDefinitionId The id of the requested JobStep.
+     * @return The requested Job object.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @GET
+    @Path("{stepDefinitionId}")
+    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
+    public JobStepDefinition find(
+            @PathParam("scopeId") ScopeId scopeId,
+            @PathParam("stepDefinitionId") EntityId stepDefinitionId) throws KapuaException {
+        return jobStepDefinitionService.find(null, stepDefinitionId);
+    }
+
+}
