# rest-api/resources/src/main/java/org/eclipse/kapua/app/api/resources/v1/resources/JobTriggerDefinitions.java
@@ -1,0 +1,130 @@
+/*******************************************************************************
+ * Copyright (c) 2016, 2021 Eurotech and/or its affiliates and others
+ *
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Eurotech - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.kapua.app.api.resources.v1.resources;
+
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DefaultValue;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.MediaType;
+
+import org.eclipse.kapua.KapuaException;
+import org.eclipse.kapua.app.api.core.model.CountResult;
+import org.eclipse.kapua.app.api.core.model.EntityId;
+import org.eclipse.kapua.app.api.core.model.ScopeId;
+import org.eclipse.kapua.app.api.core.resources.AbstractKapuaResource;
+import org.eclipse.kapua.locator.KapuaLocator;
+import org.eclipse.kapua.service.KapuaService;
+import org.eclipse.kapua.service.job.Job;
+import org.eclipse.kapua.service.scheduler.trigger.definition.TriggerDefinition;
+import org.eclipse.kapua.service.scheduler.trigger.definition.TriggerDefinitionFactory;
+import org.eclipse.kapua.service.scheduler.trigger.definition.TriggerDefinitionListResult;
+import org.eclipse.kapua.service.scheduler.trigger.definition.TriggerDefinitionQuery;
+import org.eclipse.kapua.service.scheduler.trigger.definition.TriggerDefinitionService;
+
+@Path("{scopeId}/triggerDefinitions")
+public class JobTriggerDefinitions extends AbstractKapuaResource {
+
+    private final KapuaLocator locator = KapuaLocator.getInstance();
+    private final TriggerDefinitionService triggerDefinitionService = locator.getService(TriggerDefinitionService.class);
+    private final TriggerDefinitionFactory triggerDefinitionFactory = locator.getFactory(TriggerDefinitionFactory.class);
+
+    /**
+     * Gets the {@link TriggerDefinition} list for a given {@link Job}.
+     *
+     * @param scopeId The {@link ScopeId} in which to search results.
+     * @param offset  The result set offset.
+     * @param limit   The result set limit.
+     * @return The {@link TriggerDefinitionListResult} of all the jobs triggers associated to the current selected job.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @GET
+    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
+    public TriggerDefinitionListResult simpleQuery(
+            @PathParam("scopeId") ScopeId scopeId,
+            @QueryParam("offset") @DefaultValue("0") int offset,
+            @QueryParam("limit") @DefaultValue("50") int limit) throws KapuaException {
+
+        TriggerDefinitionQuery query = triggerDefinitionFactory.newQuery(null);
+
+        query.setOffset(offset);
+        query.setLimit(limit);
+
+        return query(scopeId, query);
+    }
+
+    /**
+     * Queries the results with the given {@link TriggerDefinitionQuery} parameter.
+     *
+     * @param scopeId The {@link ScopeId} in which to search results.
+     * @param query   The {@link TriggerDefinitionQuery} to use to filter results.
+     * @return The {@link TriggerDefinitionListResult} of all the result matching the given {@link TriggerDefinitionQuery} parameter.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @POST
+    @Path("_query")
+    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    public TriggerDefinitionListResult query(
+            @PathParam("scopeId") ScopeId scopeId,
+            TriggerDefinitionQuery query) throws KapuaException {
+        query.setScopeId(null);
+        return triggerDefinitionService.query(query);
+    }
+
+    /**
+     * Counts the results with the given {@link TriggerDefinitionQuery} parameter.
+     *
+     * @param scopeId The {@link ScopeId} in which to search results.
+     * @param query   The {@link TriggerDefinitionQuery} to use to filter results.
+     * @return The count of all the result matching the given {@link TriggerDefinitionQuery} parameter.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @POST
+    @Path("_count")
+    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    public CountResult count(
+            @PathParam("scopeId") ScopeId scopeId,
+            TriggerDefinitionQuery query) throws KapuaException {
+        query.setScopeId(null);
+
+        return new CountResult(triggerDefinitionService.count(query));
+    }
+
+    /**
+     * Returns the Job specified by the "jobId" path parameter.
+     *
+     * @param scopeId The {@link ScopeId} of the requested {@link Job}.
+     * @param triggerDefinitionId The id of the requested Trigger Definition.
+     * @return The requested Job object.
+     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @since 1.5.0
+     */
+    @GET
+    @Path("{triggerDefinitionId}")
+    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
+    public TriggerDefinition find(
+            @PathParam("scopeId") ScopeId scopeId,
+            @PathParam("triggerDefinitionId") EntityId triggerDefinitionId) throws KapuaException {
+        return triggerDefinitionService.find(null, triggerDefinitionId);
+    }
+
+}
