# rest-api/resources/src/main/resources/openapi/jobStep/job-scopeId-jobId-steps.yaml
@@ -36,3 +36,52 @@ paths:
           $ref: '../openapi.yaml#/components/responses/subjectUnauthorized'
         500:
           $ref: '../openapi.yaml#/components/responses/kapuaError'
+    post:
+      tags:
+        - Job - Step
+      summary: Create a new Job Step
+      operationId: jobStepCreate
+      parameters:
+        - $ref: '../openapi.yaml#/components/parameters/scopeId'
+      requestBody:
+        description: An object containing the properties for the new Job Step to be created
+        content:
+          application/json:
+            schema:
+              $ref: './jobStep.yaml#/components/schemas/jobStepCreator'
+        required: true
+      responses:
+        201:
+          description: The Job Step that has just been created
+          content:
+            application/json:
+              schema:
+                $ref: './jobStep.yaml#/components/schemas/jobStep'
+        401:
+          $ref: '../openapi.yaml#/components/responses/unauthenticated'
+        403:
+          $ref: '../openapi.yaml#/components/responses/subjectUnauthorized'
+        404:
+          $ref: '../openapi.yaml#/components/responses/entityNotFound'
+        500:
+          $ref: '../openapi.yaml#/components/responses/kapuaError'
+    delete:
+      tags:
+        - Job - Step
+      summary: Delete a single Job Step
+      operationId: jobStepDelete
+      parameters:
+        - $ref: '../openapi.yaml#/components/parameters/scopeId'
+        - $ref: '../job/job.yaml#/components/parameters/jobId'
+        - $ref: './jobStep.yaml#/components/parameters/stepId'
+      responses:
+        204:
+          description: The Job Step has been deleted
+        401:
+          $ref: '../openapi.yaml#/components/responses/unauthenticated'
+        403:
+          $ref: '../openapi.yaml#/components/responses/subjectUnauthorized'
+        404:
+          $ref: '../openapi.yaml#/components/responses/entityNotFound'
+        500:
+          $ref: '../openapi.yaml#/components/responses/kapuaError'
